# api_yatube

./: README.md  pyproject.toml
yatube_api/: manage.py
yatube_api/api/: permissions.py  serializers.py  urls.py  views.py
yatube_api/posts/: models.py
yatube_api/posts/migrations/: 0001_initial.py  0002_auto_20240930_0847.py  0003_alter_follow_unique_together.py  0004_alter_post_options.py  0005_auto_20241003_1857.py
yatube_api/yatube_api/: settings.py
