[project]
name = 'api-yatube'
version = '0.2.0'
description = 'CRUD API for Yatube'
readme = 'README.md'
requires-python = '==3.9.13'
dependencies = [
    'Django==3.2.16',
    'pytest==6.2.4',
    'pytest-pythonpath==0.7.3',
    'pytest-django==4.4.0',
    'djangorestframework==3.12.4',
    'djangorestframework-simplejwt==4.7.2',
    'Pillow==9.3.0',
    'PyJWT==2.1.0',
    'requests==2.26.0',
    'djangorestframework-simplejwt==4.7.2',
    'djoser==2.1.0',
]

[tool.ruff]
target-version = 'py39'
line-length = 79
fix = true

[tool.ruff.format]
quote-style = 'single'
docstring-code-format = true

[tool.isort]
known_local_folder=['posts','api']
sections=['FUTURE','STDLIB','THIRDPARTY','LOCALFOLDER']

